--- a/index.html
+++ b/index.html
@@ -12,12 +12,12 @@
 
 <body>
 
-    <div class="container" style=" width: 70%; ">
+    <div class="container " style=" width: 70%; margin-top: 30px; ">
         <h1>Generador de Informe Escolar</h1>
 
-        <fieldset class="flex-container" style=" justify-content: space-between;">
+        <fieldset class="flex-container">
 
-            <div class="container" style="margin-right:10px ;">
+            <div class="container">
                 <label for="nombreJardin">Nombre del jardín</label>
                 <input type="text" id="nombreJardin" required>
             </div>
