--- a/index.html
+++ b/index.html
@@ -17,11 +17,11 @@
 
         <fieldset class="flex-container">
 
-            <div class="container">
+            <div class="jardin">
                 <label for="nombreJardin">Nombre del jardín</label>
                 <input type="text" id="nombreJardin" required>
             </div>
-            <div class="container">
+            <div class="jardin">
                 <label for="direccionJardin">Dirección</label>
                 <input type="text" id="direccionJardin" required>
 
